[tool.poetry]
name = "sysllama"
version = "0.1.0"
description = ""
authors = ["Tanmaypatil123 <Tanmaypatil3151@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
llama-index = "^0.9.10"
black = "^23.11.0"
typer = {extras = ["all"], version = "^0.9.0"}
chromadb = "^0.4.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
